log
ju.,  5 de may. de 2022 23:16:07: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:37:20: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    heap->heapArray = (Heap *) calloc(3, sizeof(heapElem));
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
1631ee6
ju.,  5 de may. de 2022 23:16:41: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
97f10b5
ju.,  5 de may. de 2022 23:20:25: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b0b91ef
ju.,  5 de may. de 2022 23:21:04: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
75bf050
ju.,  5 de may. de 2022 23:29:36: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:29:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
       pq->heapArray = (Heap *) realloc(pq->heapArray, (pq->capac * 2) + 1);
                     ^
heap.c: In function 'createHeap':
heap.c:44:35: error: too many arguments to function 'malloc'
    heap->heapArray = (heapElem *) malloc(3, sizeof(heapElem));
                                   ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:485:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *malloc (size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0c92005
ju.,  5 de may. de 2022 23:29:46: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:29:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
       pq->heapArray = (Heap *) realloc(pq->heapArray, (pq->capac * 2) + 1);
                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
f100034
